# AI-Game-Companion-Assistant

./: .gitignore  LICENSE  README.md
desktop-version/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
desktop-version/src/: App.vue  main.ts  style.css
desktop-version/src-tauri/: Cargo.toml  tauri.conf.json
desktop-version/src-tauri/icons/: README.md
desktop-version/src-tauri/src/: main.rs
desktop-version/src/components/: GradientBorderCard.vue  HUDFooter.vue  SideNavBar.vue  SignalIndicator.vue  StatusBadge.vue  Toast.vue  TopAppBar.vue  WorldCard.vue
desktop-version/src/router/: index.ts
desktop-version/src/services/: api.ts  hotkey.ts  screenshot.ts  tts.ts
desktop-version/src/stores/: app.ts
desktop-version/src/utils/: toast.ts
desktop-version/src/views/: Dashboard.vue  Logs.vue  MemoryMap.vue  Overlay.vue  RealtimeChat.vue  Settings.vue
web-version/: README.md  demo.html  index.html  启动.bat
web-version/assets/: http-DntxXYMb.js  index-CjizCD-o.css  index-DNzrFT_V.js
